some minor customizations

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -70,3 +70,8 @@ body {
   justify-content: center;
   width: 100%;
 }
+
+.list-item-hover:hover {
+  background-color: lightgray;
+  cursor: pointer;
+}
